lambdacube-dsl/tests/reject/adhoc.lc

data A = A

main = oneComp :: Vec 4 A


